syntax = "proto3";

option csharp_namespace = "Services";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package project_task;

service ProjectTaskService {
  rpc UpdateProjectTasks (ProjectTaskModel) returns (ProjectTaskModel);
  rpc DeleteProjectTasks (DeleteProjectTaskRequest) returns (ProjectTaskModel);
  rpc CreateProjectTasks (CreateProjectTaskRequest) returns (ProjectTaskModel);
  rpc GetListProjectTasks (GetListProjectTasksRequest) returns (ListProjectTasksReply);
}


message GetListProjectTasksRequest{
    int32 id_user = 1;
}

message ListProjectTasksReply{
    repeated ProjectTaskModel project_tasks = 1;
}


message DeleteProjectTaskRequest{
    int32 id_projectTasks = 1;
}

message CreateProjectTaskRequest{
     int32 id_project = 1;
     string name = 2;
     string describe = 3;
     google.protobuf.Timestamp date_start = 4;
     google.protobuf.Timestamp date_end = 5;
     bool ready = 6;
      google.protobuf.Int32Value id_parent = 7;
}

message ProjectTaskModel {
     int32 id_projectTasks = 1;
     int32 id_project = 2;
     string name = 3;
     string describe = 4;
     google.protobuf.Timestamp date_start = 5;
     google.protobuf.Timestamp date_end = 6;
     bool ready = 7;
     google.protobuf.Int32Value id_parent = 8;
}
